tests/expectations/compiler/function/transition_function_calls_transition_function_fail.out
Error [ETYC0372043]: Cannot call a local entry point from an entry point.
    --> compiler-test:5:19
     |
   5 |            return adder(a, b);
     |                   ^^^^^^^^^^^
Error [ETYC0372043]: Cannot call a local entry point from an entry point.
    --> compiler-test:7:20
     |
   7 |             return subber(a, b);
     |                    ^^^^^^^^^^^^
